# CADKernel

./: .gitignore  CMakeLists.txt  README.md
docs/: NurbsIntersection_SPEC.md
samples/: CMakeLists.txt  sample_bump_cube.cpp  sample_convert_benchy_to_nurbs.cpp  sample_convert_cylinder_to_nurbs.cpp  sample_fractal_tetrahedron.cpp  sample_mesh_factory.cpp  sample_mesh_mandelbrot.cpp  sample_mobius_strip.cpp  sample_nurbs_boolean.cpp  sample_nurbs_cube_cylinder_difference.cpp  sample_nurbs_curve_continuity.cpp  sample_nurbs_extrude.cpp  sample_nurbs_factory.cpp  sample_nurbs_fillet.cpp  sample_nurbs_fitting.cpp  sample_nurbs_mandelbrot.cpp  sample_nurbs_offseting.cpp  sample_nurbs_spheres_difference.cpp  sample_nurbs_surface_degree.cpp  sample_nurbs_sweep.cpp  sample_trimmed_nurbs_surface.cpp
src/: BezierSurface.cpp  BezierSurface.h  BezierUtil.cpp  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Face.cpp  Geometry.cpp  Geometry.h  GeometryUtil.cpp  ImageIoBmp.cpp  LinearAlgebra.cpp  LinearAlgebra.h  Mesh.cpp  Mesh.h  MeshBoolean.cpp  MeshBoolean.h  MeshFactory.cpp  MeshFactory.h  MeshKernelLinkedTriangles.cpp  MeshKernelLinkedTriangles.h  MeshSolid.cpp  MeshSolid.h  MeshSolidUtil.cpp  MeshSolidUtil.h  MeshTessellate.cpp  MeshUtil.cpp  MeshUtil.h  NurbsBasis.cpp  NurbsBasis.h  NurbsBoolean.cpp  NurbsBoolean.h  NurbsBooleanFallback.cpp  NurbsBooleanFallback.h  NurbsConstants.h  NurbsCurve.cpp  NurbsCurve.h  NurbsCurveJoin.cpp  NurbsCurveJoin.h  NurbsExtrude.cpp  (+35 more)
tests/: CMakeLists.txt  test_geometry.cpp  test_mesh_revolve.cpp  test_meshboolean.cpp  test_nurbs_to_bezier.cpp  test_nurbs_trimmedsurface.cpp  test_nurbsboolean.cpp  test_nurbscurve.cpp  test_nurbsextrude.cpp  test_nurbsfactory.cpp  test_nurbsfillet.cpp  test_nurbsfitting.cpp  test_nurbsintersection.cpp  test_nurbsrevolve.cpp  test_nurbsruled.cpp  test_nurbssurface.cpp  test_nurbssweep.cpp  test_nurbsutil.cpp  test_nurbsutil_trimmedsurface.cpp  test_renderer.cpp  test_stepfile.cpp
